@@ -1,3 +1,5 @@
+* Add private helper method isHostObject() to correctly detect host methods and properties. [David Mark, jddalton]
+
 * Massive code rewrite and restructuring [bkerley, jddalton, Joe Gornick, T.J. Crowder]
   - Adopt new coding pattern
   - Restructure file system to accommodate custom builds
